Fix some sonar findings
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>